# CommonUtilities

./: CMakeLists.txt  README.md
include/: ScopedTrue.h  SharedQueue.h  State.h  StateFactory.h  StateIds.h  StateMachine.h  UtilityFunctions.h
src/: ScopedTrue.cpp  SharedQueue.cpp  State.cpp  StateFactory.cpp  StateIds.cpp  StateMachine.cpp  UtilityFunctions.cpp
test/: CMakeLists.txt
test/include/: MockState.h  MockStateFactory.h  SharedQueueTest.h  StateMachineTest.h  TypeDefinitions.h
test/src/: MockState.cpp  MockStateFactory.cpp  ScopedTrueTest.cpp  SharedQueueTest.cpp  StateMachineTest.cpp  UtilityFunctionsTest.cpp  main.cpp
